# PeakEater

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  MultiShaper.jucer  PeakEater.jucer  README.md  conanfile.py  config.pep8  justfile  requirements.txt
.devcontainer/: Dockerfile  devcontainer.json
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: build.yml  cmake.yml  execute_merge_checks.yml  publish_release_draft.yml
Release/: appdmg-config.json  inno-config.iss
Scripts/Release/: MacOS.py  Windows.py  utils.py
Scripts/Release/assets/: icon-mac.icns  icon.icns  license.rtf
Scripts/Release/configs/: appdmg-config.json  inno-config.iss  wix-config.wxs
Source/: AppColours.h  AppTheme.h  Parameters.h  PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h  WaveShaperController.h
Source/Controller/: WaveShaperController.h
Source/DSP/: Clipper.h  ClippingFunctions.h  Helpers.h  LevelMeter.cpp  LevelMeter.h  OversampledClipper.h  OversampledWaveShaper.h
Source/GUI/: AppColours.h  CentralPanel.h  Footer.h  Header.h  LeftPanel.h  Main.h  RightPanel.h  WorkingArea.h
Source/GUI/Widgets/: CheckBox.h  Label.h  LabledMeter.h  LabledMeterSlider.h  LabledSlider.h  MeterSlider.h  PeakAnalyzer.h  Slider.h
Source/GUIv2/: CentralPanel.cpp  CentralPanel.h  ColourScheme.h  Colours.h  ControlPanel.cpp  ControlPanel.h  Dial.h  DialLookAndFeel.cpp  DialLookAndFeel.h  Header.cpp  Header.h  LeftPanel.cpp  LeftPanel.h  LinkingPanel.cpp  LinkingPanel.h  MainComponent.cpp  MainComponent.h  RightPanel.cpp  RightPanel.h  Ticks.h  Utils.h  WorkingPanel.cpp  WorkingPanel.h
Source/GUIv2/analyser/: AnalyserComponent.cpp  AnalyserComponent.h
Source/GUIv2/analyser/cliptype/: ClipTypeComponent.cpp  ClipTypeComponent.h
Source/GUIv2/analyser/peakanalyzer/: PeakAnalyzerComponent.cpp  PeakAnalyzerComponent.h  PeakMeter.cpp
Source/GUIv2/bypass/: BypassButton.cpp  BypassButton.h
Source/GUIv2/clipmeter/: ClipMeter.cpp  ClipMeter.h
Source/GUIv2/dial/: Dial.cpp  Dial.h  DialLookAndFeel.cpp  DialLookAndFeel.h
Source/GUIv2/dial/ceilingdial/: CeilingDial.cpp  CeilingDial.h  CeilingDialLookAndFeel.cpp  (+1 more)
Source/GUIv2/editableparameter/: EditableLabelAttachment.cpp  EditableLabelAttachment.h  EditableParameterComponent.cpp  EditableParameterComponent.h  EditableParameterComponentLookAndFeel.cpp  EditableParameterComponentLookAndFeel.h
Source/GUIv2/levelmeter/: LevelMeterComponent.cpp  LevelMeterComponent.h
Source/GUIv2/levelmetercomponent/: LevelMeterComponent.cpp  LevelMeterComponent.h
Source/GUIv2/linkinout/: LinkInOut.cpp  LinkInOut.h
Source/GUIv2/scaling/: ScalingSwitch.cpp
Source/Layout/: CentralPanel.h  Clipper.h  Footer.h  Header.h  LeftPanel.h  Main.h  Master.h  RightPanel.h  WorkingArea.h
Source/WaveShaping/: Clipper.h  ClippingFunctions.h  Helpers.h  OversampledClipper.h  OversampledWaveShaper.h
Source/Widgets/: BlockPanel.h  CheckBox.h  Label.h  LabledMeter.h  LabledMeterSlider.h  LabledRotarySlider.h  LabledSlider.h  MeterSlider.h  PeakAnalyzer.h  RotarySlider.h  Slider.h
conan/profiles/: linux  linux-x86_64  macos  macos-armv8  windows  windows-x86_64
config/: .clang-format  Brewfile.lock.json  appdmg-config.json  dmgbuild.py  uncrustify.cfg
config/conan/: global.conf  linux.jinja  macos.jinja  windows-x86_64.profile  windows.jinja
config/conan/profiles/: linux  linux-arm  macos  macos-armv8  windows  windows-x86_64
config/conan/shared/: build_type.jinja  cppstd.jinja  ninja.jinja  sanitizers.jinja
config/system/: packages.txt  requirements.dev.pip.txt  requirements.linux.apt.txt  requirements.macos.brew.rb  requirements.windows.choco.config
source/: Parameters.h  PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
source/Controller/: WaveShaperController.h
source/DSP/: Clipper.h  ClippingFunctions.h  Helpers.h  LevelMeter.cpp  LevelMeter.h  OversampledClipper.h  OversampledWaveShaper.h
source/GUIv2/: CentralPanel.cpp  CentralPanel.h  ColourScheme.h  ControlPanel.cpp  ControlPanel.h  Header.cpp  Header.h  LeftPanel.cpp  LeftPanel.h  LevelMetersPack.h  LinkingPanel.cpp  LinkingPanel.h  MainComponent.cpp  MainComponent.h  RightPanel.cpp  RightPanel.h  Ticks.h  Utils.h  WorkingPanel.cpp  WorkingPanel.h
source/GUIv2/analyser/: AnalyserComponent.cpp  AnalyserComponent.h
source/GUIv2/bypass/: BypassButton.cpp
source/GUIv2/clipmeter/: ClipMeter.cpp  ClipMeter.h
source/GUIv2/dial/: Dial.cpp  Dial.h  DialLookAndFeel.cpp  DialLookAndFeel.h
source/GUIv2/editableparameter/: EditableLabelAttachment.cpp  EditableLabelAttachment.h  EditableParameterComponent.cpp  EditableParameterComponent.h  EditableParameterComponentLookAndFeel.cpp  EditableParameterComponentLookAndFeel.h
source/GUIv2/levelmeter/: LevelMeterComponent.cpp  LevelMeterComponent.h
source/GUIv2/linkinout/: LinkInOut.cpp  LinkInOut.h
source/GUIv2/scaling/: ScalingSwitch.cpp  ScalingSwitch.h
source/_legacy/Controller/: WaveShaperController.h
source/_legacy/DSP/: Clipper.h  ClippingFunctions.h  DSP.cpp  DSP.h  Helpers.h  LevelMeter.h  OversampledClipper.h  OversampledWaveShaper.h
source/editor/: CentralPanel.cpp  ControlPanel.cpp  ControlPanel.h  Header.h  LeftPanel.cpp  LevelMetersPack.h  LinkingPanel.h  MainComponent.h  Ticks.h
source/editor/analyser/: AnalyserComponent.cpp
source/editor/bypass/: BypassButton.h
source/editor/clipmeter/: ClipMeter.cpp  ClipMeter.h
source/editor/dial/: Dial.h  DialLookAndFeel.cpp
source/editor/editableparameter/: EditableParameterComponent.cpp
source/editor/levelmeter/: LevelMeterComponent.cpp  LevelMeterComponent.h
source/editor/linkinout/: LinkInOut.cpp
source/processor/: Clipper.cpp  Clipper.h  ClippingFunctions.h  LevelMeter.cpp  LevelMeter.h  MainProcessor.cpp  MainProcessor.h
source/shared/: ClippingFunctions.h  LevelMeter.cpp  LevelMeter.h
test/: artefacts.test.py  compilation.test.py  conanfile.py  dmg.test.py  pluginval.test.py  test_compile_options.py
test/compilation_database/: .gitignore  index.ts  package.json  tsconfig.json
(+29 files in other folders)
